--- a/MyFlatWPF/MainWindow.xaml
+++ b/MyFlatWPF/MainWindow.xaml
@@ -55,7 +55,9 @@
             <ColumnDefinition Width="190*" MinWidth="190"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
-        <Menu x:Name="mTopLeft"
+        
+
+            <Menu x:Name="mTopLeft"
               Grid.Row="0"
               Height="24"
               VerticalAlignment="Top"
@@ -168,16 +170,29 @@
             </MenuItem>
         </Menu>
 
-        <StackPanel x:Name="spContent"
+        <Border Grid.Row="1"
+            Grid.ColumnSpan="2">
+            <Border.Background>
+                <LinearGradientBrush StartPoint="0.5, 0" EndPoint="0.5, 1">
+                    <GradientStop Color="Transparent" Offset="0.0"/>
+                    <GradientStop Color="Transparent" Offset="0.4"/>
+                    <GradientStop Color="#8ed5ff" Offset="0.85"/>
+                    <GradientStop Color="#8ed5ff" Offset="1.0"/>
+                </LinearGradientBrush>
+            </Border.Background>
+            <StackPanel x:Name="spContent"
                     Grid.Row="1"
-                    Grid.ColumnSpan="2"
-                    Background="Transparent">
+                Grid.ColumnSpan="2">
 
-            <ContentControl x:Name="ccView"
+                <ContentControl x:Name="ccView"
                             Content="{Binding CurrentView, 
                             Source={StaticResource MainWindowViewModel}, 
                             UpdateSourceTrigger=PropertyChanged}">
-            </ContentControl>
-        </StackPanel>
+
+                </ContentControl>
+
+            </StackPanel>
+        </Border>
+
     </Grid>
 </Window>
