--- a/MyFlatWPF/View/HomeView.xaml
+++ b/MyFlatWPF/View/HomeView.xaml
@@ -9,8 +9,8 @@
              mc:Ignorable="d" 
              d:DesignHeight="600" 
              d:DesignWidth="678">
-
-    <UserControl.Resources>
+    
+        <UserControl.Resources>
 
         <viewModel:HomeViewModel x:Key="HomeViewModel"/>
         <help:MyMultiValueConverter x:Key="MultiValueConverter"/>
@@ -34,10 +34,14 @@
                     Stretch="None"/>
     </UserControl.Resources>
 
+
     <Grid>
+
+
         <Grid.Resources>
             <Style x:Key="ButtonStyle" TargetType="{x:Type Button}">
                 <Setter Property="FontSize" Value="15"/>
+                <Setter Property="Cursor" Value="Hand"/>
                 <!--<Setter Property="Padding" Value="5 5 5 8"/>-->
                 <Setter Property="Template">
                     <Setter.Value>
@@ -73,7 +77,7 @@
 
             <Style x:Key="ComboBoxStyle" TargetType="ComboBox">
                 <Setter Property="Background" Value="Transparent"></Setter>
-                
+
             </Style>
 
             <Style x:Key="ComboBoxItemStyle" TargetType="ComboBoxItem">
@@ -101,6 +105,7 @@
             <ColumnDefinition Width="*"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
+
 
 
         <TextBlock Grid.Column="1"
@@ -177,7 +182,7 @@
 "
                    Margin="0 30 10 10"></Image>
         </StackPanel>
-        
+
         <StackPanel x:Name="spExpertHelp"
                     Grid.Row="4"
                     Margin="10 10 20 20">
@@ -276,7 +281,7 @@
                         CornerRadius="3"
                         BorderThickness="1"
                         BorderBrush="Black"
-                        Background="Transparent"
+                        Background="White"
                         Margin="0 0 5 0"
                         Height="30">
                     <TextBox x:Name="tbYourName"
@@ -303,7 +308,7 @@
                         CornerRadius="3"
                         BorderThickness="1"
                         BorderBrush="Black"
-                        Background="Transparent">
+                        Background="White">
                     <TextBox x:Name="tbYourEmail"
                          ToolTip="Enter Your Email"
                          Background="{Binding Mode=OneWay, Source={StaticResource YourEmail}}"
@@ -326,7 +331,7 @@
                         CornerRadius="3"
                         BorderThickness="1"
                         BorderBrush="Black"
-                        Background="Transparent"
+                        Background="White"
                         Margin="0 0 5 0"
                         Height="30">
                     <TextBox x:Name="tbYourMobile"
@@ -353,30 +358,30 @@
                         CornerRadius="3"
                         BorderThickness="1"
                         BorderBrush="Black"
-                        Background="Transparent"
+                        Background="White"
                         Cursor="Hand">
-                <ComboBox x:Name="cbServiceChoose"
+                    <ComboBox x:Name="cbServiceChoose"
                           ToolTip="Choose Service"
                           Text="Choose Service"
                           FontSize="16"
                           Style="{StaticResource ComboBoxStyle}"
                           BorderBrush="Transparent"
                           BorderThickness="0">
-                    
-                    <ComboBoxItem IsEnabled="False"
+
+                        <ComboBoxItem IsEnabled="False"
                                   IsSelected="True">Choose Service
-                    </ComboBoxItem>
-                    <ComboBoxItem>Building design
-                    </ComboBoxItem>
-                    <ComboBoxItem>Home construction
-                    </ComboBoxItem>
-                    <ComboBoxItem>Communications
-                    </ComboBoxItem>
-                    <ComboBoxItem>Room design
-                    </ComboBoxItem>
-                    <ComboBoxItem>Finishing facilities
-                    </ComboBoxItem>
-                </ComboBox>
+                        </ComboBoxItem>
+                        <ComboBoxItem>Building design
+                        </ComboBoxItem>
+                        <ComboBoxItem>Home construction
+                        </ComboBoxItem>
+                        <ComboBoxItem>Communications
+                        </ComboBoxItem>
+                        <ComboBoxItem>Room design
+                        </ComboBoxItem>
+                        <ComboBoxItem>Finishing facilities
+                        </ComboBoxItem>
+                    </ComboBox>
                 </Border>
 
                 <TextBlock x:Name="tbMessageError"
@@ -394,7 +399,7 @@
                         CornerRadius="3"
                         BorderThickness="1"
                         BorderBrush="Black"
-                        Background="Transparent">
+                        Background="White">
                     <TextBox x:Name="tbMessage"
                          ToolTip="Enter Your Message"
                            Background="{Binding Mode=OneWay, Source={StaticResource YourMessage}}"
@@ -419,9 +424,8 @@
                         Content="Send form"
                         Margin="0 0 0 10"
                         Height="30"
-                        Style="{StaticResource ButtonStyle}"
-                        Cursor="Hand"
-                    Command="{Binding SendOrderFormCommand, Source={StaticResource HomeViewModel}}">
+                        Style="{Binding }"
+                        Command="{Binding SendOrderFormCommand, Source={StaticResource HomeViewModel}}">
                     <Button.CommandParameter>
                         <MultiBinding Converter="{StaticResource MultiValueConverter}">
                             <Binding Path="Text" ElementName="tbYourName"/>
