--- a/MyFlatWPF/View/ProjectsView.xaml
+++ b/MyFlatWPF/View/ProjectsView.xaml
@@ -12,7 +12,7 @@
 
         <Grid.Resources>
 
-            <viewModel:ProjectsViewModel x:Key="ProjectsViewModel"/>
+            <!--<viewModel:ProjectsViewModel x:Key="ProjectsViewModel"/>-->
 
         </Grid.Resources>
 
@@ -38,8 +38,9 @@
                    Grid.Row="1"
                    FontSize="11"
                    HorizontalAlignment="Center"
-                   Margin="0 10 0 10"
-                   Text="{Binding CommonDescription, Source={StaticResource ProjectsViewModel}}">
+                   Margin="0 10 0 10">
+                   As a builder, we undertake large, complex projects, foster innovation,
+                   &#10; emerging technologies, and make a difference in the community.
         </TextBlock>
 
         <StackPanel x:Name="spProjects"
