--- a/MyFlatWPF/View/BlogView.xaml
+++ b/MyFlatWPF/View/BlogView.xaml
@@ -8,12 +8,61 @@
              d:DesignHeight="600" 
              d:DesignWidth="678">
     <Grid>
-        <StackPanel>
-            <TextBlock Text="Blog View"
-                       HorizontalAlignment="Center"
-                       FontSize="20"
-                       Background="Transparent">
-            </TextBlock>
-        </StackPanel>
+        <Grid.Resources>
+
+            <Style x:Key="HoverButtonStyle" TargetType="{x:Type Button}">
+                <Setter Property="OverridesDefaultStyle" Value="True"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type Button}">
+                            <Border Background="{TemplateBinding Background}">
+                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+        </Grid.Resources>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20*"/>
+            <RowDefinition Height="15*"/>
+            <RowDefinition Height="140*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+
+        <TextBlock x:Name="tbHeaderBlog"
+                   Grid.Row="0"
+                   Padding="0 5 0 0"
+                   HorizontalAlignment="Center"
+                   Text="Blog"
+                   FontSize="24"
+                   FontWeight="DemiBold">
+        </TextBlock>
+
+        <TextBlock x:Name="tbCommonDescription"
+                   Grid.Row="1"
+                   FontSize="11"
+                   HorizontalAlignment="Center"
+                   Margin="0 5 0 0">
+                   As a builder, we undertake large, complex projects, foster innovation,<LineBreak/>
+                   emerging technologies, and make a difference in the community.
+        </TextBlock>
+
+        <ScrollViewer x:Name="scrView"
+                    Grid.Row="2"
+                       VerticalScrollBarVisibility="Auto"
+                       Height="450">
+            <WrapPanel x:Name="wpBlog"
+                    HorizontalAlignment="Center"
+                    Margin="20 0 25 10"
+                    Orientation="Horizontal">
+
+
+            </WrapPanel>
+        </ScrollViewer>
     </Grid>
 </UserControl>
